Feature/david/contrast colors change (#838)
* fixed colors for dialogs in settings screen

* change app icon dialog styling

* changed dialog for report broken site

* fixing edit bookmark dialog theming

* no need to set the theme per dialog, it inherits from the theme

* using the new popup menu

* added new popup menu

* added popup layout

* added support for dark theme in fire dialog

* all dialogs are using the same theme

* using white instead of grayish

* changed text and icon colors in light and dark mode

* adding new colors for contrast

* cleaning up bad color

* updated bg color in fire dialog

* adding colors so we pass the color contrast test

* final tweaks to the toolbar, removing elevation and adding custom shadow

* back to it's proper experiment definition

* last ui review changes

* clean up bottom bar background color

* fixed version for release

* experiment back to original value

* applying ktlint

* adding text color for the dialogs

* revert changes to dialogs, they don't belong here

* remove unnecessary imports

* more cleanup reveryting changes

* revert change in bookmarks

--- a/app/src/main/res/drawable/loading_progress.xml
+++ b/app/src/main/res/drawable/loading_progress.xml
@@ -14,8 +14,22 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
+        <shape>
+            <solid
+                android:color="?toolbarBgColor" />
+        </shape>
+    </item>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/pinkish_grey_two" />
-    <item android:color="@color/almostBlackDark"/>
-</selector>
+    <item
+        android:id="@android:id/progress">
+        <clip>
+            <shape>
+                <solid
+                    android:color="?colorAccent" />
+            </shape>
+        </clip>
+    </item>
+
+</layer-list>
