--- a/app/src/main/res/drawable/bottom_navigation_bar_bg.xml
+++ b/app/src/main/res/drawable/bottom_navigation_bar_bg.xml
@@ -43,13 +43,13 @@
     <item>
         <shape android:shape="rectangle">
             <padding android:top="1dp"/>
-            <solid android:color="#50CCCCCC" />
+            <solid android:color="?attr/toolbarBgBorderColor" />
         </shape>
     </item>
     <item>
         <shape
             android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary"/>
+            <solid android:color="?attr/toolbarBgColor"/>
         </shape>
     </item>
 </layer-list>
