--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,22 +17,22 @@
 <resources>
 
     <!-- Dark theme primary colors -->
-    <color name="darkThemePrimaryDark">@color/almostBlackDark</color>
-    <color name="darkThemePrimary">@color/almostBlack</color>
+    <color name="darkThemePrimaryDark">@color/black</color>
+    <color name="darkThemePrimary">@color/newBlack</color>
 
     <!-- Light theme primary colors -->
-    <color name="lightThemePrimaryDark">@color/whiteThree</color>
+    <color name="lightThemePrimaryDark">@color/whiteFive</color>
     <color name="lightThemePrimary">@color/whiteFive</color>
 
     <!-- Widget colors -->
     <color name="divider">@color/subtleGrayTwo</color>
     <color name="slightlyTransparentDivider">#1A000000</color>
-    <color name="webViewScrollbarTrackColor">#ff333333</color>
+    <color name="webViewScrollbarTrackColor">#ff333333</color>ñ
     <color name="webViewScrollbarThumbColor">#ffababab</color>
 
     <!-- Universal -->
     <color name="dimmed">#99000000</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
     <color name="whiteSemiTransparent">#d6ffffff</color>
     <color name="whiteTwo">#e4e4e4</color>
     <color name="whiteThree">#f5f5f5</color>
@@ -43,6 +43,7 @@
     <color name="almostBlackDark">#222222</color>
     <color name="almostBlack">#333333</color>
     <color name="black">#000000</color>
+    <color name="newBlack">#111111</color>
 
     <color name="charcoalGrey">#383838</color>
     <color name="charcoalGreyTwoSemiTransparent">#d6333339</color>
@@ -56,14 +57,14 @@
     <color name="warGreyTwo">#888888</color>
     <color name="warmerGray">#777777</color>
     <color name="silver">#c0c2c9</color>
-    <color name="paleBrownishGray">#b0b0b0</color>
+    <color name="paleBrownishGray">#d0d0d0</color>
     <color name="brownishGray">#5c5c5c</color>
     <color name="brownishGrayTwo">#666666</color>
     <color name="pinkishGrayThree">#cccccc</color>
     <color name="coolGray">#969799</color>
     <color name="subtleGray">#f0f0f0</color>
     <color name="subtleGrayTwo">#d8d8d8</color>
-    <color name="whiteSix">#e5e5e5</color>
+    <color name="whiteSix">#e0e0e0</color>
     <color name="pinkish_grey_two">#c0c0c0</color>
 
     <color name="brickOrange">#d03a10</color>
@@ -88,4 +89,7 @@
     <color name="ic_launcher_purple_background">#7A4BDC</color>
     <color name="ic_launcher_blue_background">#4179ED</color>
     <color name="ic_launcher_black_background">#262626</color>
+
+    <color name="toolbarBorderColorLight">#26000000</color>
+    <color name="toolbarBorderColorDark">#33FFFFFF</color>
 </resources>
