--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
         <!-- These neutral colors cover cases before dynamic theme can be applied
              such as the app launch color -->
         <item name="colorPrimary">@color/almostBlackDark</item>
-        <item name="colorPrimaryDark">@color/almostBlackDark</item>
+        <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/cornflowerBlue</item>
         <item name="android:windowBackground">?attr/colorPrimaryDark</item>
         <item name="windowActionBar">false</item>
@@ -29,7 +29,7 @@
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <item name="android:windowActivityTransitions">true</item>
         <item name="autoCompleteTextViewStyle">@style/AutoCompleteTextViewStyle</item>
-        <item name="android:statusBarColor">?colorPrimary</item>
+        <item name="android:statusBarColor">?toolbarBgColor</item>
         <item name="snackbarButtonStyle">@style/snackbarButtonStyle</item>
     </style>
 
@@ -38,14 +38,17 @@
         <item name="colorPrimaryDark">@color/darkThemePrimaryDark</item>
         <item name="daxLogoTextColor">@color/white</item>
         <item name="normalTextColor">@color/white</item>
-        <item name="toolbarIconColor">@color/grayish</item>
-        <item name="toolbarTextColor">@color/grayish</item>
+        <item name="toolbarIconColor">@color/white</item>
+        <item name="toolbarTextColor">@color/white</item>
+        <item name="toolbarBgColor">@color/newBlack</item>
+        <item name="toolbarBgBorderColor">@color/toolbarBorderColorDark</item>
+        <item name="dialogBgColor">@color/almostBlackDark</item>
         <item name="browserIconColorSelector">@color/browser_icon_color_selector_dark</item>
         <item name="browserMenuTextColor">@color/white</item>
-        <item name="browserMenuTextColorDisabled">@color/midGray</item>
-        <item name="omnibarRoundedFieldBackgroundColor">@color/midGray</item>
+        <item name="browserMenuTextColorDisabled">@color/warGreyTwo</item>
+        <item name="omnibarRoundedFieldBackgroundColor">@color/almostBlack</item>
         <item name="omnibarTextColor">@color/white</item>
-        <item name="omnibarHintColor">@color/grayishTwo</item>
+        <item name="omnibarHintColor">@color/paleBrownishGray</item>
         <item name="omnibarLogoLetterTextColor">@color/midGray</item>
         <item name="autoCompleteTextColor">@color/white</item>
         <item name="autoCompleteSubtitleTextColor">@color/grayish</item>
@@ -62,7 +65,7 @@
         <item name="fireproofWebsiteTitleTextColor">@color/white</item>
         <item name="bookmarkSubtitleTextColor">@color/grayishTwo</item>
         <item name="settingsItemTextColor">@color/white</item>
-        <item name="settingsItemTextColorDisabled">@color/midGray</item>
+        <item name="settingsItemTextColorDisabled">@color/warGreyTwo</item>
         <item name="settingsMinorTextColor">@color/grayishTwo</item>
         <item name="settingsSwitchBackgroundColor">@color/subtleGrayTwo</item>
         <item name="settingsDividerColor">@color/almostBlack</item>
@@ -112,50 +115,53 @@
     <style name="AppTheme.BaseLight">
         <item name="colorPrimary">@color/lightThemePrimary</item>
         <item name="colorPrimaryDark">@color/lightThemePrimaryDark</item>
-        <item name="daxLogoTextColor">@color/greyishBrownTwo</item>
-        <item name="normalTextColor">@color/grayishBrown</item>
-        <item name="toolbarIconColor">@color/grayishBrown</item>
-        <item name="toolbarTextColor">@color/grayishBrown</item>
+        <item name="daxLogoTextColor">@color/almostBlackDark</item>
+        <item name="normalTextColor">@color/almostBlackDark</item>
+        <item name="toolbarIconColor">@color/almostBlackDark</item>
+        <item name="toolbarTextColor">@color/almostBlackDark</item>
+        <item name="toolbarBgColor">@color/white</item>
+        <item name="toolbarBgBorderColor">@color/toolbarBorderColorLight</item>
+        <item name="dialogBgColor">@color/white</item>
         <item name="browserIconColorSelector">@color/browser_icon_color_selector_light</item>
-        <item name="browserMenuTextColor">@color/brownishGrayTwo</item>
+        <item name="browserMenuTextColor">@color/almostBlackDark</item>
         <item name="browserMenuTextColorDisabled">@color/pinkish_grey_two</item>
         <item name="omnibarRoundedFieldBackgroundColor">@color/whiteFour</item>
-        <item name="omnibarTextColor">@color/brownishGrayTwo</item>
-        <item name="omnibarHintColor">@color/warmGray</item>
+        <item name="omnibarTextColor">@color/almostBlackDark</item>
+        <item name="omnibarHintColor">@color/brownishGrayTwo</item>
         <item name="omnibarLogoLetterTextColor">@color/whiteFour</item>
-        <item name="autoCompleteTextColor">@color/grayishBrown</item>
+        <item name="autoCompleteTextColor">@color/almostBlackDark</item>
         <item name="autoCompleteSubtitleTextColor">@color/warmerGray</item>
-        <item name="tabTitleTextColor">@color/almostBlack</item>
-        <item name="tabTitleTextColorLegacy">@color/almostBlack</item>
+        <item name="tabTitleTextColor">@color/almostBlackDark</item>
+        <item name="tabTitleTextColorLegacy">@color/almostBlackDark</item>
         <item name="tabSubtitleTextColor">@color/warmerGray</item>
         <item name="tabSelectedBorderColor">@color/cornflowerBlue</item>
         <item name="tabsFireTextColor">@color/warmerGray</item>
         <item name="tabCardBackgroundColor">@color/white</item>
+        <item name="bookmarkIconColor">@color/almostBlackDark</item>
+        <item name="bookmarkTitleTextColor">@color/almostBlackDark</item>
         <item name="whitelistTextColor">@color/almostBlack</item>
-        <item name="bookmarkIconColor">@color/grayishBrown</item>
         <item name="websiteListFaviconBackground">@color/whiteSix</item>
-        <item name="bookmarkTitleTextColor">@color/almostBlack</item>
         <item name="fireproofWebsiteTitleTextColor">@color/almostBlack</item>
         <item name="bookmarkSubtitleTextColor">@color/warmerGray</item>
-        <item name="settingsItemTextColor">@color/grayishBrown</item>
+        <item name="settingsItemTextColor">@color/almostBlackDark</item>
         <item name="settingsItemTextColorDisabled">@color/pinkish_grey_two</item>
         <item name="settingsMinorTextColor">@color/warmerGray</item>
         <item name="settingsSwitchBackgroundColor">@color/brownishGrayTwo</item>
         <item name="settingsDividerColor">@color/whiteSix</item>
-        <item name="buttonOutlinedTextColor">@color/cornflowerDark</item>
+        <item name="buttonOutlinedTextColor">@color/cornflowerBlue</item>
         <item name="buttonOutlinedBorderColor">@color/grayishThree</item>
-        <item name="callToActionTitleColor">@color/almostBlack</item>
+        <item name="callToActionTitleColor">@color/almostBlackDark</item>
         <item name="callToActionSubtitleColor">@color/brownishGrayTwo</item>
         <item name="daxDialogBackgroundColor">@color/white</item>
-        <item name="daxDialogSecondaryButtonTextColor">@color/grayishBrown</item>
+        <item name="daxDialogSecondaryButtonTextColor">@color/almostBlackDark</item>
         <item name="daxDialogSecondaryButtonRippleColor">@color/subtleGrayTwo</item>
 
-        <item name="brokenSiteSelectionTextColor">@color/almostBlack</item>
+        <item name="brokenSiteSelectionTextColor">@color/almostBlackDark</item>
         <item name="brokenSiteOutlinedColor">@color/grayishTwo</item>
         <item name="brokenSitesButtonDisabledBackgroundColor">@color/subtleGrayTwo</item>
         <item name="brokenSitesButtonDisabledTextColor">@color/white</item>
         <item name="brokenSitesButtonRippleColor">@color/subtleGrayTwo</item>
-        <item name="topCallToActionDescriptionColor">@color/almostBlack</item>
+        <item name="topCallToActionDescriptionColor">@color/almostBlackDark</item>
         <item name="topCallToActionBackgroundColor">@color/white</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/warmerGray</item>
@@ -181,7 +187,7 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
-        <item name="toolbarIconColor">@color/grayish</item>
+        <item name="toolbarIconColor">@color/white</item>
     </style>
 
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -205,12 +211,12 @@
     </style>
 
     <style name="TextInputLayoutTheme" parent="Widget.Design.TextInputLayout">
-        <item name="colorControlActivated">@color/cornflowerBlue</item>
-        <item name="colorControlNormal">@color/cornflowerBlue</item>
-        <item name="colorControlHighlight">@color/cornflowerBlue</item>
-        <item name="android:textColor">@color/grayish</item>
-        <item name="android:textColorSecondary">@color/grayish</item>
-        <item name="android:textColorHint">@color/grayish</item>
+        <item name="colorControlActivated">?colorAccent</item>
+        <item name="colorControlNormal">?colorAccent</item>
+        <item name="colorControlHighlight">?colorAccent</item>
+        <item name="android:textColor">?normalTextColor</item>
+        <item name="android:textColorSecondary">?normalTextColor</item>
+        <item name="android:textColorHint">?normalTextColor</item>
     </style>
 
     <style name="AutoCompleteTextViewStyle" parent="Widget.AppCompat.AutoCompleteTextView">
