--- a/app/src/main/res/layout/view_fireproof_website_description.xml
+++ b/app/src/main/res/layout/view_fireproof_website_description.xml
@@ -18,7 +18,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/fireproofWebsiteDescription"
