--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -70,5 +70,6 @@
     <string name="fireproofWebsiteFeatureDescription">Websites rely on cookies to keep you signed in. When you Fireproof a site, cookies won\'t be erased and you\'ll stay signed in, even after using the Fire Button.</string>
     <string name="fireproofWebsiteOverflowContentDescription">More options for fireproof website %s</string>
 
-    <string name="fireproofWebsiteToogleText">Login detection</string>
+    <string name="fireproofWebsiteToogleText">When Signing In</string>
+    <string name="fireproofWebsiteToogleTitle">Ask to Fireproof Websites</string>
 </resources>
