--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -336,4 +336,12 @@
         <item name="android:gravity">start</item>
     </style>
 
+    <style name="FireproofWebsiteGroupDivider">
+        <item name="android:background">?attr/settingsDividerColor</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginTop">25dp</item>
+        <item name="android:layout_marginBottom">25dp</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
 </resources>
