--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -19,4 +19,11 @@
     <string name="downloadManagerDisabled">Download Manager is disabled</string>
     <string name="downloadManagerIncompatible">Download Manager not available on this device</string>
     <string name="enable">Enable</string>
+
+    <!-- Flow -->
+    <string name="facebookDialogText">Did you know the Facebook app can make requests for data even when you\'re not using?&lt;br/&gt;&lt;br/&gt;Replace the app with a home screen shortcut that opens Facebook in DuckDuckGo. Then delete the Facebook app.</string>
+    <string name="facebookDialogButtonText">Add Facebook Shortcut</string>
+    <string name="facebookDialogCancelButtonText">Not Now</string>
+
+
 </resources>
