--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -25,8 +25,8 @@
     <string name="dripA2Title">Tired of being tracked online? We can help.</string>
     <string name="dripA1Description">Learn why DuckDuckGo is better than Incognito.</string>
     <string name="dripA2Description">Learn how DuckDuckGo keeps you private.</string>
-    <string name="dripB1Title">Customize your app icon.</string>
-    <string name="dripB2Title">Instantly clear tabs &amp; browsing data.</string>
+    <string name="dripB1Title">Customize your app icon</string>
+    <string name="dripB2Title">Instantly clear tabs &amp; browsing data</string>
     <string name="dripB1Description">Visit settings to choose a different icon theme.</string>
     <string name="dripB2Description">Simply tap the Fire Button by the address bar.</string>
     <string name="dripAButtonText">Show Me</string>
