--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -21,6 +21,10 @@
     <string name="enable">Enable</string>
 
     <!-- Fireproof websites -->
+    <string name="fireproofWebsiteLoginDialogTitle">Would you like to Fireproof %s?</string>
+    <string name="fireproofWebsiteLoginDialogDescription">Fireproof websites to stay signed in after using the Fire Button.</string>
+    <string name="fireproofWebsiteLoginDialogPositive">Fireproof</string>
+    <string name="fireproofWebsiteLoginDialogNegative">Not now</string>
     <string name="fireproofWebsiteItemsSectionTitle">Websites</string>
     <string name="fireproofWebsiteToogleText">When Signing In</string>
     <string name="fireproofWebsiteToogleTitle">Ask to Fireproof Websites</string>
