--- a/app/src/main/res/layout/view_fireproof_divider.xml
+++ b/app/src/main/res/layout/view_fireproof_divider.xml
@@ -14,6 +14,4 @@
   ~ limitations under the License.
   -->
 
-<View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/settingsSectionPrivacyBottomDivider"
-    style="@style/FireproofWebsiteGroupDivider" />
+<View style="@style/FireproofWebsiteGroupDivider" />
