--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -39,4 +39,5 @@
     <string name="useOurAppNotificationTitle">Worried about Facebook tracking you?</string>
     <string name="useOurAppNotificationDescription">Here\'s a simply way to reduce it\'s reach.</string>
 
+    <string name="deletionDialogText">Checking your feed in DuckDuckGo is a great alternative to using the Facebook app!&lt;br/&gt;&lt;br/&gt;But if the Facebook app is on your phone, it can make requests for data even when you\'re not using it.&lt;br/&gt;&lt;br/&gt;Prevent this by deleting it now!</string>
 </resources>
