--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -40,5 +40,5 @@
     <string name="fireproofWebsiteItemsSectionTitle">Websites</string>
     <string name="fireproofWebsiteToogleText">When Signing In</string>
     <string name="fireproofWebsiteToogleTitle">Ask to Fireproof Websites</string>
-    <string name="fireproofWebsiteMenuTitleRemove">Remove Fireproof</string>
+    <string name="fireproofWebsiteMenuTitleRemove">Remove Fireproofing</string>
 </resources>
