--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -74,7 +74,8 @@
         <com.duckduckgo.app.browser.ui.ScrollAwareRefreshLayout
             android:id="@+id/swipeRefreshContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:enabled="false">
 
                 <FrameLayout
                     android:id="@+id/webViewContainer"
