Always show overScrollMode to make swipe-refresh behavior more clear

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -74,8 +74,7 @@
         <com.duckduckgo.app.browser.ui.ScrollAwareRefreshLayout
             android:id="@+id/swipeRefreshContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:enabled="false">
+            android:layout_height="match_parent">
 
                 <FrameLayout
                     android:id="@+id/webViewContainer"
