Remove android:navigationBarColor from main style and move the same style to v27 theme file for better compatibility

--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -30,4 +30,10 @@
         <item name="android:navigationBarColor">@color/white</item>
     </style>
 
+    <style name="FireDialog" parent="@style/Theme.Design.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:navigationBarColor">?toolbarBgColor</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
 </resources>
