Add FireDialog theme in order to fix navigation buttons hiden on some devices (#863)
* Add FireDialog theme in order to fix navigation buttons hiden on some devices

* Remove android:navigationBarColor from main style and move the same style to v27 theme file for better compatibility

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -310,4 +310,9 @@
         <item name="android:textColor">?attr/colorAccent</item>
     </style>
 
+    <style name="FireDialog" parent="@style/Theme.Design.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
 </resources>
