--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -34,10 +34,12 @@
 
     <!-- Fireproof websites -->
     <string name="fireproofWebsiteLoginDialogTitle">Would you like to Fireproof %s?</string>
-    <string name="fireproofWebsiteLoginDialogDescription">Fireproof websites to stay signed in after using the Fire Button.</string>
+    <string name="fireproofWebsiteLoginDialogDescription">Fireproofing this site will keep you signed in after using the Fire Button.</string>
     <string name="fireproofWebsiteLoginDialogPositive">Fireproof</string>
     <string name="fireproofWebsiteLoginDialogNegative">Not now</string>
     <string name="fireproofWebsiteItemsSectionTitle">Websites</string>
     <string name="fireproofWebsiteToogleText">When Signing In</string>
     <string name="fireproofWebsiteToogleTitle">Ask to Fireproof Websites</string>
+    <!-- !! String changed translate and replace !! -->
+    <string name="fireproofWebsiteFeatureDescription">Websites rely on cookies to keep you signed in. When you Fireproof a site, cookies won\'t be erased and you\'ll stay signed in, even after using the Fire Button. We still block third-party trackers found on Fireproof websites.</string>
 </resources>
