Login detection for fireproofing (#847)
* login detection

* intercept post request to detect logins

* login detection toggle added in settings

* Add pixel when user enable/disables login detection

* pixel login detected fireproof dialog actions

* Introduce the option to remove fireproof into overflow menu

* wrap javascript into anonymous function when injected

* introduce checkbox inside overflow menu to fireproof websites

* Update copies after product review feedback

* remove section title from fireproof settings (sign in toggle)

--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -94,10 +94,19 @@
                 style="@style/BrowserTextMenuItem"
                 android:text="@string/addBookmarkMenuTitle" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/fireproofWebsitePopupMenuItem"
-                style="@style/BrowserTextMenuItem"
-                android:text="@string/fireproofWebsiteMenuTitle" />
+                style="@style/BrowserCheckBoxMenuItem"
+                android:theme="@style/PopUpMenuSwitchTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:button="@null"
+                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
+                android:drawablePadding="24dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="0dp"
+                android:text="@string/fireproofWebsiteMenuTitleAdd" />
 
             <TextView
                 android:id="@+id/sharePageMenuItem"
