--- a/app/src/main/res/layout/view_fireproof_website_toggle.xml
+++ b/app/src/main/res/layout/view_fireproof_website_toggle.xml
@@ -14,20 +14,10 @@
   ~ limitations under the License.
   -->
 
-<com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fireproofWebsiteDescription"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fontFamily="sans-serif"
-    android:justificationMode="inter_word"
-    android:lineSpacingExtra="4sp"
+<androidx.appcompat.widget.SwitchCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fireproofWebsiteToggle"
+    style="@style/FireproofWebsiteSwitch"
     android:paddingStart="16dp"
-    android:paddingTop="12dp"
     android:paddingEnd="16dp"
-    android:paddingBottom="12dp"
-    android:text="@string/fireproofWebsiteFeatureDescription"
-    android:textColor="?attr/settingsMinorTextColor"
-    android:textSize="14sp"
-    android:textStyle="normal"
-    tools:text="Lorem ipsum dolor sit amet" />
+    android:text="@string/fireproofWebsiteToogleText"
+    android:theme="@style/SettingsSwitchTheme" />
