--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -61,7 +61,7 @@
     <string name="whitelistEntryOverflowContentDescription">More options for unprotected site %s</string>
     <string name="whitelistEntryDeleteConfirmMessage">Are you sure you want to remove &lt;b>%s&lt;/b> from unprotected sites?</string>
     <string name="whitelistExplanation">These sites will not be enhanced by Privacy Protection</string>
-    <string name="whitelistNoEntries">No Unprotected Sites Yet.</string>
+    <string name="whitelistNoEntries">No Unprotected Sites Yet</string>
 
     <!-- Settings -->
     <string name="settingsPrivacyProtectionWhitelist">Unprotected Sites</string>
